--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,8 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = build
+BUILDDIR      = ../../HowToMakeDocs-docs/
+PUBLISHDIR    = ../../../iridescent/Tutorials/HowToMakeDocs/
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
@@ -61,6 +62,8 @@ html:
 	# Added by Zhi Liu - auto open html
 	#google-chrome build/html/index.html
 	firefox build/html/index.html
+	mkdir -p $(PUBLISHDIR)/
+	cp -rf $(BUILDDIR)/html/ $(PUBLISHDIR)/
 	# --------------------------------------------------------------
 
 .PHONY: dirhtml
