--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,13 +3,12 @@
 version: 2
 
 build:
-  os: "ubuntu-20.04"
   tools:
     python: "3.9"
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: docs/source/requirements.txt
